// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Feature utils addFeatures should generate feature modules for the given array of features 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from \\"@spartacus/core\\";
import { userAccountTranslationChunksConfig, userAccountTranslations } from \\"@spartacus/user/account/assets\\";
import { UserAccountRootModule, USER_ACCOUNT_FEATURE } from \\"@spartacus/user/account/root\\";

@NgModule({
  declarations: [],
  imports: [
    UserAccountRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [USER_ACCOUNT_FEATURE]: {
        module: () =>
          import('@spartacus/user/account').then((m) => m.UserAccountModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: userAccountTranslations,
      chunks: userAccountTranslationChunksConfig,
    },
  })
  ]
})
export class UserFeatureModule { }
"
`;

exports[`Feature utils addFeatures should override the options 1`] = `
"import { NgModule } from '@angular/core';
import { I18nConfig, provideConfig } from \\"@spartacus/core\\";
import { UserAccountModule } from \\"@spartacus/user/account\\";
import { userAccountTranslationChunksConfig, userAccountTranslations } from \\"@spartacus/user/account/assets\\";
import { UserAccountRootModule } from \\"@spartacus/user/account/root\\";

@NgModule({
  declarations: [],
  imports: [
    UserAccountRootModule,
    UserAccountModule
  ],
  providers: [provideConfig(<I18nConfig>{
    i18n: {
      resources: userAccountTranslations,
      chunks: userAccountTranslationChunksConfig,
    },
  })]
})
export class UserFeatureModule { }
"
`;

exports[`Feature utils addFeatures should override the schematics config 1`] = `
"import { NgModule } from '@angular/core';
import { CmsConfig, I18nConfig, provideConfig } from \\"@spartacus/core\\";
import { userAccountTranslationChunksConfig, userAccountTranslations } from \\"@spartacus/user/account/assets\\";
import { UserAccountRootModule, USER_ACCOUNT_FEATURE } from \\"@spartacus/user/account/root\\";

@NgModule({
  declarations: [],
  imports: [
    UserAccountRootModule
  ],
  providers: [provideConfig(<CmsConfig>{
    featureModules: {
      [USER_ACCOUNT_FEATURE]: {
        module: () =>
          import('@spartacus/user/account').then((m) => m.UserAccountModule),
      },
    }
  }),
  provideConfig(<I18nConfig>{
    i18n: {
      resources: userAccountTranslations,
      chunks: userAccountTranslationChunksConfig,
    },
  })
  ]
})
export class UserFeatureModule { }
"
`;

exports[`Feature utils analyzeFeature should correctly analyze the Spartacus feature module 1`] = `
Array [
  "AuthModule.forRoot()",
  "LogoutModule",
  "LoginRouteModule",
  "HamburgerMenuModule",
  "SiteContextSelectorModule",
  "LinkModule",
  "BannerModule",
  "CmsParagraphModule",
  "TabParagraphContainerModule",
  "BannerCarouselModule",
  "CategoryNavigationModule",
  "NavigationModule",
  "FooterNavigationModule",
  "BreadcrumbModule",
  "ScrollToTopModule",
  "PageTitleModule",
  "UserModule",
  "UserOccModule",
  "AddressBookModule",
  "PaymentMethodsModule",
  "NotificationPreferenceModule",
  "MyInterestsModule",
  "StockNotificationModule",
  "ConsentManagementModule",
  "MyCouponsModule",
  "AnonymousConsentsModule.forRoot()",
  "AnonymousConsentsDialogModule",
  "AnonymousConsentManagementBannerModule",
  "ProductModule.forRoot()",
  "ProductOccModule",
  "ProductDetailsPageModule",
  "ProductListingPageModule",
  "ProductListModule",
  "SearchBoxModule",
  "ProductFacetNavigationModule",
  "ProductTabsModule",
  "ProductCarouselModule",
  "ProductReferencesModule",
  "ProductImagesModule",
  "ProductSummaryModule",
  "ProductIntroModule",
  "CostCenterOccModule",
  "NavigationEventModule",
  "HomePageEventModule",
  "ProductPageEventModule",
  "ExternalRoutesModule.forRoot()",
]
`;

exports[`Feature utils analyzeFeature should correctly analyze the Spartacus feature module 2`] = `
Array [
  "Account",
  "Cart",
  "Order",
  "Checkout",
]
`;
